SERVER-26193 Fix incorrect rounding in double to decimal conversion